kubeflow-azimuth/kubeflow-azimuth-chart/templates/istio-ingressgateway-545.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    managed-by: kubeflow-azimuth-app
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
